src/test/ui/issues/issue-77919.stderr
error[E0412]: cannot find type `PhantomData` in this scope
  --> $DIR/issue-77919.rs:10:9
   |
LL |     _n: PhantomData,
   |         ^^^^^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
LL | use std::marker::PhantomData;
   |

error[E0412]: cannot find type `VAL` in this scope
  --> $DIR/issue-77919.rs:12:63
   |
LL | impl<N, M> TypeVal<usize> for Multiply<N, M> where N: TypeVal<VAL> {}
   |          -                                                    ^^^ not found in this scope
   |          |
   |          help: you might be missing a type parameter: `, VAL`

error[E0046]: not all trait items implemented, missing: `VAL`
  --> $DIR/issue-77919.rs:12:1
   |
LL |     const VAL: T;
   |     ------------- `VAL` from trait
...
LL | impl<N, M> TypeVal<usize> for Multiply<N, M> where N: TypeVal<VAL> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `VAL` in implementation

error: constant expression depends on a generic parameter
  --> $DIR/issue-77919.rs:2:9
   |
LL |     [1; <Multiply<Five, Five>>::VAL];
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0046, E0412.
For more information about an error, try `rustc --explain E0046`.
